2016-04-30  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp (MainGUI::createLayout): Fix memory leak.

2016-04-30  Werner Lemberg  <wl@gnu.org>

	[ftinspect] A new Qt based variant for ftgrid.  GUI draft only.

	The idea is to eventually integrate the functionality of ftview,
	ftkern, and ftdiff also.

	The code compiles fine with both Qt4 and Qt5; it doesn't do anything
	yet beyond showing how the GUI looks like.

	* src/ftinspect.cpp, src/ftinspect.h: New source code files.

	* src/ftinspect.pro: New qmake input file.

2016-04-08  Werner Lemberg  <wl@gnu.org>

	[ftview] Avoid hangs with bitmap only fonts.

	Problem reported by Hin-Tak Leung <htl10@users.sourceforge.net>.

	* src/ftview.c (Render_Text, Render_Waterfall): Escape loop if not a
	single glyph could be rendered.

2016-03-18  Werner Lemberg  <wl@gnu.org>

	* graph/x11/rules.mk (X11_LIB): Also append `/lib64'.

2016-03-02  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Use colors for dot numbers.

	We now have bitmap rendering also, and black numbers on a black
	background are ... not optimal.

	* src/ftgrid.c (grid_status_draw_outline): Implement it.

2016-03-01  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Exchange movement directions of `i' and `k' keys.

	This synchronizes the actions with its descriptions in the help
	screen.

	* src/ftgrid.c (Process_Event): Implement it.

2016-03-01  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (grid_status_draw_outline): Fix memory leak.

2016-02-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Touch up.

	* src/ftgrid.c (status): Initialize `header' as NULL to display font
	name initially. Use bits of new field `work' to control...
	(grid_status_draw_outline, main, Process_Event): Updated accordingly.
	* src/ftgrid.1: Updated.

2016-02-21  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c (event_grid_zoom): Make zoom up always work.

2016-02-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Enable LCD filtering.
